# dawnpy

./: README.md  pyproject.toml  tox.ini
.github/workflows/: master.yml
src/dawnpy/: __init__.py  __main__.py  config.py  logger.py  objectid.py  plugins_loader.py  simple_protocol.py  sources.py  templates.py
tests/: __init__.py  conftest.py  headerdefs_helpers.py  test_cli_main.py  test_cli_options.py  test_cli_table.py  test_client_descriptor.py  test_cmd_dawn.py  test_cmd_desc_new.py  test_cmd_descriptor.py  test_cmd_init.py  test_cmd_project.py  test_config.py  test_conflicts.py  test_console_base.py  test_console_dispatch.py  test_dawn_tooling.py  test_descriptor_generator.py  test_descriptor_golden.py  test_descriptor_mapping.py  test_descriptor_objects.py  test_descriptor_types.py  test_descriptor_utils.py  test_descriptor_validator.py  test_descriptor_vars.py  test_device_decode.py  test_device_registry.py  test_handler_adapters.py  test_headerdefs.py  test_imports.py  test_multi_device.py  test_object_summary.py  test_objectid.py  test_proc.py  test_project.py  test_simple_device_client.py  test_simple_device_console.py  test_simple_protocol.py  test_templates.py  test_type_registration.py
tests/commands/: test_desc_gen.py  test_desc_headers_check.py  test_desc_valid.py
tests/dawn/: test_cmake.py  test_kconfig.py  test_output_build_dir.py  test_workflows.py  tooling_context.py
tests/descriptor/: cmd_descriptor_context.py  conftest.py  descriptor_helpers.py  test_client.py  test_cmd_descriptor.py  test_dawn_tooling.py  test_descriptor_generator.py  (+4 more)
(+246 files in other folders)
