# tools/dawnpy/pyproject.toml
#
# SPDX-License-Identifier: Apache-2.0
#

[build-system]
requires = ["setuptools >= 61.2"]
build-backend = 'setuptools.build_meta'

[project]
name = "dawnpy"
version = "0.0.2"
description = "Python library for Dawn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
             "click>=8.1",
             "kconfiglib>=14.1",
             "prompt_toolkit>=3.0",
             "pydantic>=2.0",
             "pyyaml>=6.0",
             "rich>=13.0",
             "tomli-w>=1.0",
             "tree-sitter>=0.25",
             "tree-sitter-cpp>=0.23",
]
classifiers = [
  "Topic :: Software Development :: Embedded Systems",
]
keywords = [
  "nuttx", "dawn",
]

[project.urls]
Repository = "https://github.com/railab/dawnpy"
Documentation = "https://railab.github.io/dawn/tools/dawnpy.html"
"Dawn Project" = "https://github.com/railab/dawn"

[project.scripts]
dawnpy = "dawnpy.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dawnpy*"]

[tool.setuptools.package-data]
dawnpy = ["config/*.yaml", "py.typed", "templates/**/*"]

[tool.black]
line-length = 79
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 79
